fix(cart-btn): enhance layout with flexbox alignment and adjust line styling
Improved the `.info` class with flexbox for better item alignment and spacing. Updated `.line` height to 25px and background color for consistency, removed unnecessary min-width. Cleaned up `.quantity` media query formatting.

--- a/apps/client/src/entities/header/card-btn/CartBtn.module.css
+++ b/apps/client/src/entities/header/card-btn/CartBtn.module.css
@@ -45,6 +45,10 @@
 }
 
 .info {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+
   @media (max-width: 768px) {
     display: none;
   }
@@ -52,9 +56,8 @@
 
 .line {
   width: 1px;
-  min-width: 1px;
-  height: 100%;
-  background-color: var(--color-bg-secondary);
+  height: 25px;
+  background-color: var(--color-bg-primary);
 
   @media (hover: hover) and (pointer: fine) {
     &:hover {
@@ -71,9 +74,8 @@
   gap: 8px;
 }
 
-.quantity { 
+.quantity {
   @media (max-width: 375px) {
     display: none;
-    
   }
 }
